Proyectos/Proyecto2/k8s/policies/node-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-policy
spec:
  podSelector:
    matchLabels:
      app: node  # Selecciona los pods con la etiqueta "app: node"
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0  # Permite cualquier dirección IP externa
    ports:
      - protocol: TCP
        port: 9800
