Proyectos/Proyecto2/k8s/policies/redis-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-redis-policy
spec:
  podSelector:
    matchLabels:
      app: redis  # Selecciona los pods con la etiqueta "app: node"
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0  # Permite cualquier dirección IP externa
    ports:
      - protocol: TCP
        port: 6379
